src/objects/SurveyTaker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Formula__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Surveys</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <label>Client ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_ID__c</fullName>
        <label>Community ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <formula>datevalue(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Month__c</fullName>
        <formula>Month(Created_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Year__c</fullName>
        <formula>Text(Year(Created_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <formula>IF( 

OR( 
Q1_NPS_Score__c = 0, 
Q1_NPS_Score__c = 1, 
Q1_NPS_Score__c = 2, 
Q1_NPS_Score__c = 3, 
Q1_NPS_Score__c = 4, 
Q1_NPS_Score__c = 5, 
Q1_NPS_Score__c = 6), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Comments__c</fullName>
        <label>NPS Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Negative_NPS_Count__c</fullName>
        <label>Negative NPS Count</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>0,1,2,3,4,5,6</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Not_Interested_Response__c</fullName>
        <formula>IF(

AND(
Survey__r.Name == &apos;Rally Engage&apos;,
Transaction_ID__c != NULL,
Q1_NPS_Response_Score__c = NULL,
Has_Comments__c = FALSE), True,False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not-Interested Response</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platform_ID__c</fullName>
        <label>Platform ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positive_NPS_Count__c</fullName>
        <label>Positive NPS Count</label>
        <summaryFilterItems>
            <field>SurveyQuestionResponse__c.NPS_Score_Field__c</field>
            <operation>equals</operation>
            <value>9,10</value>
        </summaryFilterItems>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Protractor__c</fullName>
        <formula>IF( 

OR( 
Q1_NPS_Score__c = 10, 
Q1_NPS_Score__c = 9), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Protractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Formula__c</fullName>
        <formula>IF(

OR(
Q1_NPS_Score__c = 10,
Q1_NPS_Score__c = 9
), 1, 

IF(

OR(
Q1_NPS_Score__c = 0,
Q1_NPS_Score__c = 1,
Q1_NPS_Score__c = 2,
Q1_NPS_Score__c = 3,
Q1_NPS_Score__c = 4,
Q1_NPS_Score__c = 5,
Q1_NPS_Score__c = 6
), -1, 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Response_Score__c</fullName>
        <label>NPS Response Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q1_NPS_Score__c</fullName>
        <formula>Value(Q1_NPS_Response_Score__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rally_ID__c</fullName>
        <label>Rally ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rally Implementation</label>
        <referenceTo>Milestone1_Project__c</referenceTo>
        <relationshipLabel>Surveys Taken</relationshipLabel>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rally_NPS__c</fullName>
        <formula>(Positive_NPS_Count__c - Negative_NPS_Count__c)/Total_Responses__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rally NPS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remove_from_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove from Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Date__c</fullName>
        <label>Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipName>SurveyTakers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Taken__c</fullName>
        <description>Whether the survey was taken or not</description>
        <label>Taken</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Responses__c</fullName>
        <label>Total Responses</label>
        <summaryForeignKey>SurveyQuestionResponse__c.SurveyTaker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <label>Transaction ID</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Taken By User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_Taken</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Survey Taken</label>
    <listViews>
        <fullName>All_Surveys</fullName>
        <columns>NAME</columns>
        <columns>Account_Formula__c</columns>
        <columns>Client_ID__c</columns>
        <columns>Has_Comments__c</columns>
        <columns>Q1_NPS_Formula__c</columns>
        <columns>Q1_NPS_Score__c</columns>
        <columns>Q1_NPS_Response_Score__c</columns>
        <columns>Rally_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Surveys</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys Taken</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>